[gd_scene load_steps=27 format=3 uid="uid://2gkapde18l7n"]

[ext_resource type="Script" path="res://TEST/GAMEPLAY.gd" id="1_r1hr8"]
[ext_resource type="Shader" path="res://shader/color_sprit.gdshader" id="2_b46ia"]
[ext_resource type="Texture2D" uid="uid://c3egy4uov3514" path="res://core/resource/world/trainingroom/trainingroom.png" id="3_ipqua"]
[ext_resource type="Texture2D" uid="uid://c2juekayf38d4" path="res://core/resource/world/trainingroom/wave_texture-export.png" id="4_2jr63"]
[ext_resource type="PackedScene" uid="uid://dq6qe65p1gvxk" path="res://TEST/flame.tscn" id="5_lhtin"]
[ext_resource type="Texture2D" uid="uid://cajpppskpen4b" path="res://shader/FLAME_FRONT.png" id="6_8b8um"]
[ext_resource type="Script" path="res://core/script/world/gameplay_talk.gd" id="7_hunol"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r3ct5"]
resource_local_to_scene = true
shader = ExtResource("2_b46ia")
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ewd68"]
a = Vector2(0, -36.36)
b = Vector2(0, 36.36)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4cnrd"]
resource_local_to_scene = true
shader = ExtResource("2_b46ia")
shader_parameter/color = Color(0, 0, 0, 0.839216)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ps1oa"]
size = Vector2(8.08, 19.19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgnyg"]
size = Vector2(8.08, 57.57)

[sub_resource type="Animation" id="Animation_1dofy"]
length = 0.001

[sub_resource type="Animation" id="Animation_qwmvv"]
resource_name = "新建动画"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("0:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-6.28319, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cylwt"]
_data = {
"RESET": SubResource("Animation_1dofy"),
"新建动画": SubResource("Animation_qwmvv")
}

[sub_resource type="Animation" id="Animation_alwp3"]
resource_name = "rotate"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-6.28319, 6.28319]
}

[sub_resource type="Animation" id="Animation_vd4pi"]
resource_name = "新建动画"
length = 2.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wohcy"]
_data = {
"rotate": SubResource("Animation_alwp3"),
"新建动画": SubResource("Animation_vd4pi")
}

[sub_resource type="Animation" id="Animation_gm4vc"]
resource_name = "新建动画"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-6.28319, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41dpj"]
_data = {
"新建动画": SubResource("Animation_gm4vc")
}

[sub_resource type="Shader" id="Shader_kt228"]
resource_local_to_scene = true
code = "shader_type canvas_item;
uniform vec4 color:source_color;
void fragment() {
	// Place fragment code here.
	vec4 old_color=texture(TEXTURE,UV);
	vec4 new_color=color;
	new_color.a=old_color.a;
	COLOR=new_color;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oi73l"]
resource_local_to_scene = true
shader = SubResource("Shader_kt228")
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_l7u3g"]
resource_name = "normal"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1.2, 1.68),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.3, 0.3), Vector2(1, 1), Vector2(0.3, 0.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../1:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.24, 0.6, 1.08, 1.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.3, 0.3), Vector2(1, 1), Vector2(0.3, 0.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_imrip"]
_data = {
"normal": SubResource("Animation_l7u3g")
}

[sub_resource type="Animation" id="Animation_rrb1c"]
resource_name = "新建动画"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("burst:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-6.28319, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wrmf3"]
_data = {
"新建动画": SubResource("Animation_rrb1c")
}

[node name="GamePlay" type="Node2D"]
script = ExtResource("1_r1hr8")
wave_color_1 = Color(1, 0.345098, 0.278431, 1)
wave_color_2 = Color(0.921569, 0.447059, 0.129412, 1)
flame_center_scale = 0.854

[node name="Area2D" type="Area2D" parent="."]
z_index = 1
position = Vector2(0, -60)
rotation = -1.5708
collision_layer = 4096
collision_mask = 8192
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
material = SubResource("ShaderMaterial_r3ct5")
position = Vector2(-5.53162e-05, 0.0701647)
rotation = 1.5708
scale = Vector2(1.59496, 1.00011)
texture = ExtResource("3_ipqua")
region_enabled = true
region_rect = Rect2(359.624, 140.43, 104.895, 1.28818)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_ewd68")
debug_color = Color(0, 0.662745, 0.772549, 0.419608)

[node name="Area2D2" type="Area2D" parent="."]
z_index = 1
position = Vector2(-60, 0)
collision_layer = 4096
collision_mask = 8192
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Area2D2"]
material = SubResource("ShaderMaterial_r3ct5")
position = Vector2(-5.53162e-05, 0.0701647)
rotation = 1.5708
scale = Vector2(1.59496, 1.00011)
texture = ExtResource("3_ipqua")
region_enabled = true
region_rect = Rect2(359.624, 140.43, 104.895, 1.28818)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("SegmentShape2D_ewd68")
debug_color = Color(0, 0.662745, 0.772549, 0.419608)

[node name="Area2D3" type="Area2D" parent="."]
z_index = 1
position = Vector2(60, 0)
collision_layer = 4096
collision_mask = 8192
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Area2D3"]
material = SubResource("ShaderMaterial_r3ct5")
position = Vector2(-5.53162e-05, 0.0701647)
rotation = 1.5708
scale = Vector2(1.59496, 1.00011)
texture = ExtResource("3_ipqua")
region_enabled = true
region_rect = Rect2(359.624, 140.43, 104.895, 1.28818)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource("SegmentShape2D_ewd68")
debug_color = Color(0, 0.662745, 0.772549, 0.419608)

[node name="Area2D4" type="Area2D" parent="."]
z_index = 1
position = Vector2(0, 60)
rotation = -1.5708
collision_layer = 4096
collision_mask = 8192
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Area2D4"]
material = SubResource("ShaderMaterial_r3ct5")
position = Vector2(-5.53162e-05, 0.0701647)
rotation = 1.5708
scale = Vector2(1.59496, 1.00011)
texture = ExtResource("3_ipqua")
region_enabled = true
region_rect = Rect2(359.624, 140.43, 104.895, 1.28818)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
shape = SubResource("SegmentShape2D_ewd68")
debug_color = Color(0, 0.662745, 0.772549, 0.419608)

[node name="Sprite2D2" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_4cnrd")
position = Vector2(1.90735e-06, 0.0450497)
scale = Vector2(6.62111, 6.61611)
texture = ExtResource("4_2jr63")

[node name="Polygon2D" parent="." instance=ExtResource("5_lhtin")]

[node name="wave" type="Node2D" parent="."]
z_index = 1
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="wave"]
visible = false
position = Vector2(-3.63798e-12, -9.595)
shape = SubResource("RectangleShape2D_ps1oa")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wave"]
visible = false
position = Vector2(15.8163, -24.0504)
rotation = 0.581722
shape = SubResource("RectangleShape2D_pgnyg")
debug_color = Color(0.917647, 0.254902, 0.34902, 0.419608)

[node name="0" type="Node2D" parent="wave"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="wave/0"]
root_node = NodePath("../..")
autoplay = "新建动画"
playback_speed = 0.0
libraries = {
"": SubResource("AnimationLibrary_cylwt")
}

[node name="1" type="Node2D" parent="wave"]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="wave/1"]
root_node = NodePath("../..")
autoplay = "rotate"
libraries = {
"": SubResource("AnimationLibrary_wohcy")
}

[node name="2" type="Node2D" parent="wave"]

[node name="AnimationPlayer3" type="AnimationPlayer" parent="wave/2"]
root_node = NodePath("../..")
autoplay = "新建动画"
libraries = {
"": SubResource("AnimationLibrary_41dpj")
}

[node name="Sprite2D2" type="Sprite2D" parent="wave/2"]
visible = false
z_index = 4
material = SubResource("ShaderMaterial_oi73l")
scale = Vector2(0.055, 0.055)
texture = ExtResource("6_8b8um")

[node name="talk" type="AnimationPlayer" parent="wave"]
root_node = NodePath("../0")
autoplay = "normal"
playback_speed = 0.5
libraries = {
"": SubResource("AnimationLibrary_imrip")
}
script = ExtResource("7_hunol")

[node name="burst_wave" type="Node2D" parent="."]

[node name="burst" type="Node2D" parent="burst_wave"]

[node name="rotate" type="AnimationPlayer" parent="burst_wave"]
autoplay = "新建动画"
libraries = {
"": SubResource("AnimationLibrary_wrmf3")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D4" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="wave/talk" to="." method="_on_talk_animation_finished"]
[connection signal="animation_finished" from="wave/talk" to="wave/talk" method="_on_animation_finished"]
